k8s/overlays/prod/patches/app-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-app-service
spec:
  type: ClusterIP
