k8s/overlays/prod/patches/app-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
    - host: blog.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-app-service
                port:
                  number: 80
  tls:
    - hosts: [ blog.example.com ]
      secretName: blog-prod-tls
